# Langchain-Notes

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment_init.sh  main.py  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-dev.yml  poetry_init.sh  starship_init.sh
configs/logging/: config.yaml
configs/pre-commit/: .pre-commit-config.yaml
src/: __init__.py  chains.py  llms.py  prompts.py  script_1.py
src/utils/: custom_logger.py
