[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["edoch <edo_chio@hotmail.it>"]
# package-mode = false
classifiers = ["Private :: Do not Upload"]
description = "Repository to test Langchain features"
exclude = ["**"]
license = "Proprietary"
name = "Langchain-Notes"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
omegaconf = "^2.3.0"
python = "~3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pre-commit = "^3.5.0"
ruff = "^0.1.3"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I"
]
